--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			width: min(100vw, calc(100vh * (340 / 220)));
-			height: min(100vh, calc(100vw * (220 / 340)));
+			/* width: min(100vw, calc(100vh * (340 / 220)));
+			height: min(100vh, calc(100vw * (220 / 340))); */
+			width: calc(340px * 3);
+			height: calc(220px * 3);
 		}
 
 		canvas {
