--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+	<link href="style.css" rel="stylesheet">
 	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
 	<link rel="manifest" href="favicons/site.webmanifest">
-	<title>FTS</title>
+	<title>Blitz-GL</title>
 	<style>
 		html,
 		body {
@@ -30,6 +31,7 @@
 			height: min(100vh, calc(100vw * (220 / 340))); */
 			width: calc(340px * 2);
 			height: calc(220px * 2);
+			position: relative;
 		}
 
 		canvas {
@@ -39,12 +41,24 @@
 			image-rendering: pixelated;
 			display: block;
 		}
+
+		#game-ui, 
+		#editor-ui {
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+		}
 	</style>
 </head>
 
 <body>
-	<div id="game"></div>
-	<script type="module" src="src/main.ts"></script>
+	<div id="game">
+		<div id="game-ui"></div>
+	</div>
+	<div id="editor-ui"></div>
+	<script type="module" src="src/main.tsx"></script>
 </body>
 
 </html>
